Infrastructure/k8s/dashboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-deployment
  labels:
    app: dashboard-deployment
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: dashboardapp
  template:
    metadata:
      labels:
        app: dashboardapp
    spec:
      containers:
        - name: dashboardapp
          image: dashboard:latest
          imagePullPolicy: Never
          ports: 
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-service
  labels:
    app: dashboardapp
spec:
  type: NodePort
  selector:
    app: dashboardapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
