Infrastructure/k8s/dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: riding-handbrake-upgrade.ngrok-free.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashboard-service
                port:
                  number: 8080
